--- a/AdventOfCode2018/AdventOfCode2018.csproj
+++ b/AdventOfCode2018/AdventOfCode2018.csproj
@@ -53,7 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Input\1.input" />
+    <None Include="Input\1.input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
