--- a/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
+++ b/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problems\Problem1Tests.cs" />
+    <Compile Include="Problems\Problem5Tests.cs" />
     <Compile Include="Problems\Problem4Tests.cs" />
     <Compile Include="Problems\Problem3Tests.cs" />
     <Compile Include="Problems\Problem2Tests.cs" />
