Day 10 in progress - I've gone codeblind...

--- a/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
+++ b/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problems\Problem10Tests.cs" />
     <Compile Include="Problems\Problem1Tests.cs" />
     <Compile Include="Problems\Problem5Tests.cs" />
     <Compile Include="Problems\Problem4Tests.cs" />
