Day 18 part 1 solved, part 2 needs more braining.

--- a/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
+++ b/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problems\Problem10Tests.cs" />
+    <Compile Include="Problems\Problem18Tests.cs" />
     <Compile Include="Problems\Problem1Tests.cs" />
     <Compile Include="Problems\Problem5Tests.cs" />
     <Compile Include="Problems\Problem4Tests.cs" />
