--- a/AdventOfCode2018/AdventOfCode2018.csproj
+++ b/AdventOfCode2018/AdventOfCode2018.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problems\Problem18.cs" />
     <Compile Include="Problems\Problem1.cs" />
     <Compile Include="Problems\Problem.cs" />
     <Compile Include="Problems\Problem10.cs" />
