--- a/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
+++ b/AdventOfCode2018.Tests/AdventOfCode2018.Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Problems\Problem6Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CoordinateTests.cs" />
+    <Compile Include="Utils\VectorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
